force-app/main/default/objects/ICF_Non_CCC__c/ICF_Non_CCC__c.object-meta.xml
<CustomObject>
    <label>ICF Non CCC</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICF Non CCC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>