force-app/main/default/objects/ICF_Non_CCC__c/fields/Approved_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_F__c</fullName>
    <description>IF ( ISBLANK( Approved_Date__c ), NULL,
DATE( VALUE(LEFT(Approved_Date__c,4)) ,VALUE(RIGHT(LEFT(Approved_Date__c,6),2)),VALUE(RIGHT(Approved_Date__c,2))) 
)</description>
    <formula>IF ( ISBLANK( Approved_Date__c ), NULL,
 DATEVALUE(Approved_Date__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Date F</label>
    <type>Date</type>
</CustomField>