force-app/main/default/objects/ICF_Non_CCC__c/fields/Captured_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Captured_Date_F__c</fullName>
    <description>IF ( ISBLANK( Captured_Date__c ), NULL,
DATE( VALUE(LEFT(Captured_Date__c,4)) ,VALUE(RIGHT(LEFT(Captured_Date__c,6),2)),VALUE(RIGHT(Captured_Date__c,2))) 
)</description>
    <formula>IF ( ISBLANK( Captured_Date__c ), NULL,
 DATEVALUE(Captured_Date__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Captured Date F</label>
    <type>Date</type>
</CustomField>