force-app/main/default/objects/ICF_Non_CCC__c/fields/CERTIFICATENO__c.field-meta.xml
<CustomField>
    <fullName>CERTIFICATENO__c</fullName>
    <label>CERTIFICATENO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>