force-app/main/default/objects/ICF_Non_CCC__c/fields/Claim_Acc_No__c.field-meta.xml
<CustomField>
    <fullName>Claim_Acc_No__c</fullName>
    <label>Claim Acc No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>