force-app/main/default/objects/ICF_Non_CCC__c/fields/Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Amount__c</fullName>
    <label>Claim Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>