force-app/main/default/objects/ICF_Non_CCC__c/fields/Claim_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Approved_Date__c</fullName>
    <label>Claim Approved Date</label>
    <type>DateTime</type>
</CustomField>