force-app/main/default/objects/ICF_Non_CCC__c/fields/Claim_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Claim_Bank_Name__c</fullName>
    <label>Claim Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>