force-app/main/default/objects/ICF_Non_CCC__c/fields/Claim_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Payment_Date__c</fullName>
    <label>Claim Payment Date</label>
    <type>DateTime</type>
</CustomField>