force-app/main/default/objects/ICF_Non_CCC__c/fields/Claim_status__c.field-meta.xml
<CustomField>
    <fullName>Claim_status__c</fullName>
    <label>Claim status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>