force-app/main/default/objects/ICF_Non_CCC__c/fields/Claim_Submitted_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Claim_Submitted_Date_F__c</fullName>
    <description>IF ( ISBLANK( Claim_Submitted_Date__c ), NULL,
DATE( VALUE(LEFT(Claim_Submitted_Date__c,4)) ,VALUE(RIGHT(LEFT(Claim_Submitted_Date__c,6),2)),VALUE(RIGHT(Claim_Submitted_Date__c,2))) 
)</description>
    <formula>IF ( ISBLANK( Claim_Submitted_Date__c ), NULL,
 DATEVALUE(Claim_Submitted_Date__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Submitted Date F</label>
    <type>Date</type>
</CustomField>