force-app/main/default/objects/ICF_Non_CCC__c/fields/Claim_Tr_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Tr_Date__c</fullName>
    <label>Claim Tr Date</label>
    <type>Date</type>
</CustomField>