force-app/main/default/objects/ICF_Non_CCC__c/fields/Claim_Tr_Desc__c.field-meta.xml
<CustomField>
    <fullName>Claim_Tr_Desc__c</fullName>
    <label>Claim Tr Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>