force-app/main/default/objects/ICF_Non_CCC__c/fields/Claim_Tr_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Tr_Status__c</fullName>
    <label>Claim Tr Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>