force-app/main/default/objects/ICF_Non_CCC__c/fields/cnttype__c.field-meta.xml
<CustomField>
    <fullName>cnttype__c</fullName>
    <label>cnttype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>