force-app/main/default/objects/ICF_Non_CCC__c/fields/COBDesc__c.field-meta.xml
<CustomField>
    <fullName>COBDesc__c</fullName>
    <label>COBDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>