force-app/main/default/objects/ICF_Non_CCC__c/fields/COBType__c.field-meta.xml
<CustomField>
    <fullName>COBType__c</fullName>
    <label>COBType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>