force-app/main/default/objects/ICF_Non_CCC__c/fields/Created_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Text__c</fullName>
    <formula>TEXT(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Text</label>
    <type>Text</type>
</CustomField>