force-app/main/default/objects/ICF_Non_CCC__c/fields/DatOCC__c.field-meta.xml
<CustomField>
    <fullName>DatOCC__c</fullName>
    <label>DatOCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>