force-app/main/default/objects/ICF_Non_CCC__c/fields/DATREP__c.field-meta.xml
<CustomField>
    <fullName>DATREP__c</fullName>
    <label>DATREP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>