force-app/main/default/objects/ICF_Non_CCC__c/fields/Due_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_F__c</fullName>
    <description>IF ( ISBLANK( Due_Date__c ), NULL,
DATE( VALUE(LEFT(Due_Date__c,4)) ,VALUE(RIGHT(LEFT(Due_Date__c,6),2)),VALUE(RIGHT(Due_Date__c,2))) 
)</description>
    <formula>IF ( ISBLANK( Due_Date__c ), NULL,
 DATEVALUE(Due_Date__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date F</label>
    <type>Date</type>
</CustomField>