force-app/main/default/objects/ICF_Non_CCC__c/fields/ICF_ExcludeFrom__c.field-meta.xml
<CustomField>
    <fullName>ICF_ExcludeFrom__c</fullName>
    <label>ICF - ExcludeFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>