force-app/main/default/objects/ICF_Non_CCC__c/fields/ICF_Send_Field__c.field-meta.xml
<CustomField>
    <fullName>ICF_Send_Field__c</fullName>
    <label>ICF - Send Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>