force-app/main/default/objects/ICF_Non_CCC__c/fields/ICF_Send_Value__c.field-meta.xml
<CustomField>
    <fullName>ICF_Send_Value__c</fullName>
    <label>ICF - Send Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>