force-app/main/default/objects/ICF_Non_CCC__c/fields/ICF_SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>ICF_SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICF - SMS Template</label>
    <referenceTo>Email_SMS_Template__c</referenceTo>
    <relationshipLabel>ICF Non CCC (ICF - SMS Template)</relationshipLabel>
    <relationshipName>ICF_Non_CCC1</relationshipName>
    <type>Lookup</type>
</CustomField>