force-app/main/default/objects/ICF_Non_CCC__c/fields/ICF_Status__c.field-meta.xml
<CustomField>
    <fullName>ICF_Status__c</fullName>
    <label>ICF - Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>