force-app/main/default/objects/ICF_Non_CCC__c/fields/ICF_Survey_Template__c.field-meta.xml
<CustomField>
    <fullName>ICF_Survey_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICF - Survey Template</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>ICF Non CCC</relationshipLabel>
    <relationshipName>ICF_Non_CCC</relationshipName>
    <type>Lookup</type>
</CustomField>