force-app/main/default/objects/ICF_Non_CCC__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <label>Insurance Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>