force-app/main/default/objects/ICF_Non_CCC__c/fields/Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date__c</fullName>
    <label>Issued Date</label>
    <type>DateTime</type>
</CustomField>