force-app/main/default/objects/ICF_Non_CCC__c/fields/Issued_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date_F__c</fullName>
    <description>IF ( ISBLANK( Issued_Date__c ), NULL,
DATE( VALUE(LEFT(Issued_Date__c,4)) ,VALUE(RIGHT(LEFT(Issued_Date__c,6),2)),VALUE(RIGHT(Issued_Date__c,2))) 
)</description>
    <formula>IF ( ISBLANK( Issued_Date__c ), NULL,
 DATEVALUE(Issued_Date__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issued Date F</label>
    <type>Date</type>
</CustomField>