force-app/main/default/objects/ICF_Non_CCC__c/fields/MOT__c.field-meta.xml
<CustomField>
    <fullName>MOT__c</fullName>
    <label>MOT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>