force-app/main/default/objects/ICF_Non_CCC__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <label>Paid Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>