force-app/main/default/objects/ICF_Non_CCC__c/fields/Pay_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_To_Date__c</fullName>
    <label>Pay To Date</label>
    <type>DateTime</type>
</CustomField>