force-app/main/default/objects/ICF_Non_CCC__c/fields/Pay_To_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Pay_To_Date_F__c</fullName>
    <description>IF ( ISBLANK( Pay_To_Date__c ), NULL,
DATE( VALUE(LEFT(Pay_To_Date__c,4)) ,VALUE(RIGHT(LEFT(Pay_To_Date__c,6),2)),VALUE(RIGHT(Pay_To_Date__c,2))) 
)</description>
    <formula>IF ( ISBLANK( Pay_To_Date__c ), NULL,
 DATEVALUE(Pay_To_Date__c ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay To Date F</label>
    <type>Date</type>
</CustomField>