force-app/main/default/objects/ICF_Non_CCC__c/fields/Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Plan_Code__c</fullName>
    <label>Plan  Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>