force-app/main/default/objects/ICF_Non_CCC__c/fields/Policy_Communication__c.field-meta.xml
<CustomField>
    <fullName>Policy_Communication__c</fullName>
    <label>Policy Communication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>