force-app/main/default/objects/ICF_Non_CCC__c/fields/Policy_Desc_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Desc_Status__c</fullName>
    <label>Policy Desc Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>