force-app/main/default/objects/ICF_Non_CCC__c/fields/Policy_Expired__c.field-meta.xml
<CustomField>
    <fullName>Policy_Expired__c</fullName>
    <label>Policy Expired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>