force-app/main/default/objects/ICF_Non_CCC__c/fields/Premium_Settled__c.field-meta.xml
<CustomField>
    <fullName>Premium_Settled__c</fullName>
    <label>Premium Settled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>