force-app/main/default/objects/ICF_Non_CCC__c/fields/Priority_Customer__c.field-meta.xml
<CustomField>
    <fullName>Priority_Customer__c</fullName>
    <label>Priority Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>