force-app/main/default/objects/ICF_Non_CCC__c/fields/Received_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Received_Date_F__c</fullName>
    <description>IF ( ISBLANK( Received_Date__c ), NULL,
DATE( VALUE(LEFT(Received_Date__c,4)) ,VALUE(RIGHT(LEFT(Received_Date__c,6),2)),VALUE(RIGHT(Received_Date__c,2))) 
)</description>
    <formula>IF ( ISBLANK( Received_Date__c ), NULL,
 DATEVALUE(Received_Date__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Date F</label>
    <type>Date</type>
</CustomField>