force-app/main/default/objects/ICF_Non_CCC__c/fields/RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeID__c</fullName>
    <formula>IF (MOT__c == &apos;I BUY&apos;,&apos;0120k000000268dAAA&apos;,
IF (MOT__c == &apos;I RENEW&apos;,&apos;0120k000000268iAAA&apos;,
IF (MOT__c == &apos;I ASK&apos;,&apos;0120k000000268nAAA&apos;,
IF (MOT__c == &apos;I CLAIM&apos;,&apos;0120k000000268sAAA&apos;,
&apos;0120k000000268dAAA&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordTypeID</label>
    <type>Text</type>
</CustomField>