force-app/main/default/objects/ICF_Non_CCC__c/fields/Reversal_Code__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Code__c</fullName>
    <label>Reversal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>