force-app/main/default/objects/ICF_Non_CCC__c/fields/Reversal_Date__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Date__c</fullName>
    <label>Reversal Date</label>
    <type>DateTime</type>
</CustomField>