force-app/main/default/objects/ICF_Non_CCC__c/fields/Reversal_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Date_F__c</fullName>
    <description>IF ( ISBLANK( Reversal_Date__c ), NULL,
DATE( VALUE(LEFT(Reversal_Date__c,4)) ,VALUE(RIGHT(LEFT(Reversal_Date__c,6),2)),VALUE(RIGHT(Reversal_Date__c,2))) 
)</description>
    <formula>IF ( ISBLANK( Reversal_Date__c ), NULL,
 DATEVALUE(Reversal_Date__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reversal Date F</label>
    <type>Date</type>
</CustomField>