force-app/main/default/objects/ICF_Non_CCC__c/fields/Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Date__c</fullName>
    <label>Send Date</label>
    <type>DateTime</type>
</CustomField>