force-app/main/default/objects/ICF_Non_CCC__c/fields/Send_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Send_Date_F__c</fullName>
    <description>IF ( ISBLANK( Send_Date__c ), NULL,
DATE( VALUE(LEFT(Send_Date__c,4)) ,VALUE(RIGHT(LEFT(Send_Date__c,6),2)),VALUE(RIGHT(Send_Date__c,2))) 
)</description>
    <formula>IF ( ISBLANK( Send_Date__c ), NULL,
 DATEVALUE(Send_Date__c ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Date F</label>
    <type>Date</type>
</CustomField>