force-app/main/default/objects/ICF_Non_CCC__c/fields/Staging_Created_Date_D2__c.field-meta.xml
<CustomField>
    <fullName>Staging_Created_Date_D2__c</fullName>
    <label>Staging Created Date D2</label>
    <type>DateTime</type>
</CustomField>