force-app/main/default/objects/ICF_Non_CCC__c/fields/Staging_Created_Date_D2_F__c.field-meta.xml
<CustomField>
    <fullName>Staging_Created_Date_D2_F__c</fullName>
    <formula>DATEVALUE( Staging_Created_Date_D2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staging Created Date D2 F</label>
    <type>Date</type>
</CustomField>