force-app/main/default/objects/ICF_Non_CCC__c/fields/Staging_Created_Date_D__c.field-meta.xml
<CustomField>
    <fullName>Staging_Created_Date_D__c</fullName>
    <formula>DATETIMEVALUE( Staging_Created_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staging Created Date D</label>
    <type>DateTime</type>
</CustomField>