force-app/main/default/objects/ICF_Non_CCC__c/fields/Staging_Created_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Staging_Created_Date_F__c</fullName>
    <formula>IF ( ISBLANK(  Staging_Created_Date__c  ), NULL, 
DATEVALUE(Staging_Created_Date__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staging Created Date F</label>
    <type>Date</type>
</CustomField>