force-app/main/default/objects/ICF_Non_CCC__c/fields/Staging_Created_Date_R__c.field-meta.xml
<CustomField>
    <fullName>Staging_Created_Date_R__c</fullName>
    <formula>LEFT(TEXT(Staging_Created_Date__c),10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>LEFT(Staging_Created_Date__c,10)</inlineHelpText>
    <label>Staging Created Date R</label>
    <type>Text</type>
</CustomField>