force-app/main/default/objects/ICF_Non_CCC__c/fields/Status_Check__c.field-meta.xml
<CustomField>
    <fullName>Status_Check__c</fullName>
    <description>Used as flag if record already run through a batch process to exclude/schedule or not.</description>
    <label>Status Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>