force-app/main/default/objects/ICF_Non_CCC__c/fields/Submitted_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date_F__c</fullName>
    <description>IF ( ISBLANK(Submitted_Date__c), NULL,
DATE( VALUE(LEFT(Submitted_Date__c,4)) ,VALUE(RIGHT(LEFT(Submitted_Date__c,6),2)),VALUE(RIGHT(Submitted_Date__c,2))) 
)</description>
    <formula>IF ( ISBLANK(Submitted_Date__c), NULL,
 DATEVALUE(Submitted_Date__c) 
)</formula>
    <label>Submitted Date F</label>
    <type>Date</type>
</CustomField>