force-app/main/default/objects/ICF_Non_CCC__c/fields/Suspicious__c.field-meta.xml
<CustomField>
    <fullName>Suspicious__c</fullName>
    <label>Suspicious</label>
    <length>255</length>
    <type>Text</type>
</CustomField>