force-app/main/default/objects/ICF_Non_CCC__c/fields/TAT__c.field-meta.xml
<CustomField>
    <fullName>TAT__c</fullName>
    <label>TAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>