force-app/main/default/objects/ICF_Non_CCC__c/fields/Transaction_Desc__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Desc__c</fullName>
    <label>Transaction Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>