force-app/main/default/objects/ICF_Non_CCC__c/recordTypes/I_ASK.recordType-meta.xml
<RecordType>
    <fullName>I_ASK</fullName>
    <active>true</active>
    <label>I ASK</label>
</RecordType>