force-app/main/default/objects/ICF_Non_CCC__c/recordTypes/I_BUY.recordType-meta.xml
<RecordType>
    <fullName>I_BUY</fullName>
    <active>true</active>
    <label>I BUY</label>
</RecordType>