force-app/main/default/objects/ICF_Non_CCC__c/recordTypes/I_CLAIM.recordType-meta.xml
<RecordType>
    <fullName>I_CLAIM</fullName>
    <active>true</active>
    <label>I CLAIM</label>
</RecordType>