force-app/main/default/objects/ICF_Non_CCC__c/recordTypes/I_RENEW.recordType-meta.xml
<RecordType>
    <fullName>I_RENEW</fullName>
    <active>true</active>
    <label>I RENEW</label>
</RecordType>