force-app/main/default/objects/ICF_Non_CCC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MOT__c</columns>
    <columns>Entity__c</columns>
    <columns>Status__c</columns>
    <columns>Application__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>