force-app/main/default/objects/ICF_Non_CCC__c/listViews/All_AFI_I_ASK.listView-meta.xml
<ListView>
    <fullName>All_AFI_I_ASK</fullName>
    <columns>NAME</columns>
    <columns>MOT__c</columns>
    <columns>Entity__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AFI</value>
    </filters>
    <filters>
        <field>MOT__c</field>
        <operation>equals</operation>
        <value>IASK</value>
    </filters>
    <label>All - AFI - I ASK</label>
    <language>en_US</language>
</ListView>