force-app/main/default/objects/ICF_Non_CCC__c/listViews/All_AFI_Not_Draft.listView-meta.xml
<ListView>
    <fullName>All_AFI_Not_Draft</fullName>
    <columns>NAME</columns>
    <columns>MOT__c</columns>
    <columns>Entity__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Send_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AFI</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Check,Start,Closed,Cancel</value>
    </filters>
    <label>All - AFI - Not Draft</label>
    <language>en_US</language>
</ListView>