force-app/main/default/objects/ICF_Non_CCC__c/listViews/All_AMFS_I_Ask.listView-meta.xml
<ListView>
    <fullName>All_AMFS_I_Ask</fullName>
    <columns>NAME</columns>
    <columns>MOT__c</columns>
    <columns>Entity__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Policy_Status__c</columns>
    <columns>Transaction_Code__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Submitted_Date_F__c</columns>
    <columns>Insurance_Type__c</columns>
    <columns>Plan__c</columns>
    <columns>Plan_Code__c</columns>
    <columns>Priority_Customer__c</columns>
    <columns>Application__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AMFS</value>
    </filters>
    <filters>
        <field>MOT__c</field>
        <operation>equals</operation>
        <value>I Ask</value>
    </filters>
    <label>All - AMFS - I Ask</label>
    <language>en_US</language>
</ListView>