force-app/main/default/objects/ICF_Non_CCC__c/listViews/All_Check.listView-meta.xml
<ListView>
    <fullName>All_Check</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>MOT__c</columns>
    <columns>Entity__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Policy_Status__c</columns>
    <columns>Transaction_Code__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Submitted_Date_F__c</columns>
    <columns>Insurance_Type__c</columns>
    <columns>Plan__c</columns>
    <columns>Plan_Code__c</columns>
    <columns>Priority_Customer__c</columns>
    <columns>Application__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Check</value>
    </filters>
    <label>All - Check</label>
    <language>en_US</language>
</ListView>