force-app/main/default/objects/ICF_Non_CCC__c/listViews/All_Closed.listView-meta.xml
<ListView>
    <fullName>All_Closed</fullName>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>MOT__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>All - Closed</label>
    <language>en_US</language>
</ListView>