force-app/main/default/objects/ICF_Non_CCC__c/listViews/All_MAGI.listView-meta.xml
<ListView>
    <fullName>All_MAGI</fullName>
    <columns>NAME</columns>
    <columns>MOT__c</columns>
    <columns>Entity__c</columns>
    <columns>Application__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>MAGI</value>
    </filters>
    <label>All - MAGI</label>
    <language>en_US</language>
</ListView>